--- a/taixinkanghu/src/main/res/layout/item_text_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/item_text_select_screening.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:background="@drawable/bg_list_select_screening"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:textSize="16dip" />
-
+    android:layout_height="20dip"
+    android:background="@drawable/bg_list_select_screening"
+    android:gravity="center_vertical|center_horizontal" />
