--- a/taixinkanghu/src/main/res/layout/activity_customer_service.xml
+++ b/taixinkanghu/src/main/res/layout/activity_customer_service.xml
@@ -112,6 +112,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dip"
                         android:text="问题反馈"
                         android:textColor="@color/text_color_black"
                         android:textSize="16.0sp" />
@@ -119,7 +120,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="20dip"
+                        android:layout_marginRight="35dip"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text=">"
